# fizzbuzz-hs

./: .gitignore  README.md  fizzbuzz.cabal  stack.yaml
src/: FizzBuzz.hs  Main.hs
test/: FizzBuzzSpec.hs
