name:                fizzbuzz
version:             0.1.0.0
synopsis:            Fizzbuzz Haskell
license:             GPL
author:              Surya Setiyaputra
maintainer:
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   FizzBuzz
  build-depends:     base >=4.7
  hs-source-dirs:    src
  default-language:  Haskell2010

executable fizzbuzz
  main-is:           Main.hs
  build-depends:     fizzbuzz, base >=4.7
  hs-source-dirs:    src
  default-language:  Haskell2010
  other-modules:     FizzBuzz

test-suite spec
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    test
  default-language:  Haskell2010
  main-is:           Spec.hs
  other-modules:     FizzBuzzSpec
  build-depends:     base >=4.7
                   , fizzbuzz
                   , hspec
                   , hspec-expectations
                   , QuickCheck
